# emu-microbench

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  allocation.cc  bulk_copy.c  common.h  emu_2d_array.h  emu_c_utils.c  emu_chunked_array.c  emu_chunked_array.h  emu_for_1d.c  emu_for_1d.h  emu_for_2d.c  emu_for_2d.h  emu_for_local.c  emu_for_local.h  emu_grain_helpers.c  emu_grain_helpers.h  emu_reduce_1d.c  emu_reduce_1d.h  emu_reduce_2d.c  emu_scatter_gather.c  emu_scatter_gather.h  emu_sort_local.c  emu_sort_local.h  emu_striped_array.h  generate.py  global_copy.c  global_reduce.c  global_stream.c  global_stream.cc  global_stream_1d.c  global_stream_1d_cxx.cc  global_stream_cxx.cc  hooks.c  hooks.h  hot_range.c  hot_range_chunked.c  (+24 more)
cmake/: Findemu_c_utils.cmake  emu-17.11-hw-toolchain.cmake  emu-18.02-toolchain.cmake  emu-cxx-toolchain.cmake  emu-toolchain.cmake
cmake/Platform/: Emu1.cmake
emu_c_utils/: CMakeLists.txt  COPYING  README.md  emu_c_utils.c  emu_c_utils.h  emu_chunked_array.c  emu_chunked_array.h  emu_for_1d.c  emu_for_1d.h  emu_for_2d.c  emu_for_2d.h  emu_for_local.c  emu_for_local.h  emu_grain_helpers.c  emu_grain_helpers.h  emu_reduce_1d.h  emu_reduce_2d.c  emu_scatter_gather.c  emu_sort_local.c  emu_sort_local.h  hooks.c  hooks.h  layout.c  memoryweb_x86.h
emu_cxx_utils/: chunked_array.h  emu_2d_array.h  emu_striped_array.h  jagged_array.h  memoryweb_x86.h  mirrored.h  ragged_array.h  spawn_templates.h  striped_array.h
suites/: emu.json  native.json  ping_pong.json  pointer-chase-large.json
